// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EarnInputView render matches snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                Stake
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={-1}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <RNCSafeAreaView
                      edges={
                        {
                          "bottom": "additive",
                          "left": "additive",
                          "right": "additive",
                          "top": "off",
                        }
                      }
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "backgroundColor": "#ffffff",
                              "flex": 1,
                            },
                            {
                              "backgroundColor": "#ffffff",
                              "flex": 1,
                              "flexDirection": "column",
                              "justifyContent": "center",
                            },
                          ]
                        }
                      >
                        <View
                          style={
                            [
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "gap": 16,
                                "minHeight": 56,
                                "paddingLeft": 8,
                                "paddingRight": 8,
                              },
                              {
                                "marginTop": 0,
                              },
                              undefined,
                            ]
                          }
                          testID="header"
                        >
                          <View>
                            <View
                              onLayout={[Function]}
                            >
                              <View … />
                            </View>
                          </View>
                          <View
                            style={
                              [
                                [Object],
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={[Array]}
                            >
                              <Text … />
                            </View>
                          </View>
                          <View>
                            <View
                              onLayout={[Function]}
                            />
                          </View>
                        </View>
                        <RCTScrollView
                          collapsable={false}
                          contentContainerStyle={
                            {
                              "flexGrow": 1,
                            }
                          }
                          handlerTag={1}
                          handlerType="NativeViewGestureHandler"
                          onGestureHandlerEvent={[Function]}
                          onGestureHandlerStateChange={[Function]}
                          style={
                            {
                              "flex": 1,
                            }
                          }
                        >
                          <View>
                            <View
                              style={[Object]}
                            >
                              <View … />
                              <View … />
                              <View … />
                            </View>
                            <View
                              style={[Object]}
                            />
                          </View>
                        </RCTScrollView>
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "backgroundColor": "#ffffff",
                              "flexDirection": "row",
                              "gap": 8,
                              "justifyContent": "center",
                              "padding": 16,
                            }
                          }
                        >
                          <View
                            accessibilityRole="button"
                            accessibilityState={
                              {
                                "busy": undefined,
                                "checked": undefined,
                                "disabled": undefined,
                                "expanded": undefined,
                                "selected": undefined,
                              }
                            }
                            accessibilityValue={
                              {
                                "max": undefined,
                                "min": undefined,
                                "now": undefined,
                                "text": undefined,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "backgroundColor": "#3c4d9d0f",
                                "borderRadius": 20,
                                "flex": 1,
                                "flexDirection": "row",
                                "height": 40,
                                "justifyContent": "center",
                                "opacity": 1,
                                "overflow": "hidden",
                                "paddingHorizontal": 16,
                              }
                            }
                          >
                            <Text
                              accessibilityRole="none"
                              style={[Object]}
                            >
                              25%
                            </Text>
                          </View>
                          <View
                            accessibilityRole="button"
                            accessibilityState={
                              {
                                "busy": undefined,
                                "checked": undefined,
                                "disabled": undefined,
                                "expanded": undefined,
                                "selected": undefined,
                              }
                            }
                            accessibilityValue={
                              {
                                "max": undefined,
                                "min": undefined,
                                "now": undefined,
                                "text": undefined,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "backgroundColor": "#3c4d9d0f",
                                "borderRadius": 20,
                                "flex": 1,
                                "flexDirection": "row",
                                "height": 40,
                                "justifyContent": "center",
                                "opacity": 1,
                                "overflow": "hidden",
                                "paddingHorizontal": 16,
                              }
                            }
                          >
                            <Text
                              accessibilityRole="none"
                              style={[Object]}
                            >
                              50%
                            </Text>
                          </View>
                          <View
                            accessibilityRole="button"
                            accessibilityState={
                              {
                                "busy": undefined,
                                "checked": undefined,
                                "disabled": undefined,
                                "expanded": undefined,
                                "selected": undefined,
                              }
                            }
                            accessibilityValue={
                              {
                                "max": undefined,
                                "min": undefined,
                                "now": undefined,
                                "text": undefined,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "backgroundColor": "#3c4d9d0f",
                                "borderRadius": 20,
                                "flex": 1,
                                "flexDirection": "row",
                                "height": 40,
                                "justifyContent": "center",
                                "opacity": 1,
                                "overflow": "hidden",
                                "paddingHorizontal": 16,
                              }
                            }
                          >
                            <Text
                              accessibilityRole="none"
                              style={[Object]}
                            >
                              75%
                            </Text>
                          </View>
                          <View
                            accessibilityRole="button"
                            accessibilityState={
                              {
                                "busy": undefined,
                                "checked": undefined,
                                "disabled": undefined,
                                "expanded": undefined,
                                "selected": undefined,
                              }
                            }
                            accessibilityValue={
                              {
                                "max": undefined,
                                "min": undefined,
                                "now": undefined,
                                "text": undefined,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "backgroundColor": "#3c4d9d0f",
                                "borderRadius": 20,
                                "flex": 1,
                                "flexDirection": "row",
                                "height": 40,
                                "justifyContent": "center",
                                "opacity": 1,
                                "overflow": "hidden",
                                "paddingHorizontal": 16,
                              }
                            }
                          >
                            <SvgMock
                              color="#121314"
                              fill="currentColor"
                              height={16}
                              name="Sparkle"
                              style={[Object]}
                              width={16}
                            />
                            <Text
                              accessibilityRole="none"
                              style={[Object]}
                            >
                              Max
                            </Text>
                          </View>
                        </View>
                        <View
                          style={
                            [
                              {
                                "display": "flex",
                                "gap": 12,
                              },
                              {
                                "paddingHorizontal": 16,
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                [Object],
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={[Array]}
                            >
                              <View … />
                            </View>
                            <View
                              style={[Array]}
                            >
                              <View … />
                            </View>
                            <View
                              style={[Array]}
                            >
                              <View … />
                            </View>
                          </View>
                          <View
                            style={
                              [
                                [Object],
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={[Array]}
                            >
                              <View … />
                            </View>
                            <View
                              style={[Array]}
                            >
                              <View … />
                            </View>
                            <View
                              style={[Array]}
                            >
                              <View … />
                            </View>
                          </View>
                          <View
                            style={
                              [
                                [Object],
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={[Array]}
                            >
                              <View … />
                            </View>
                            <View
                              style={[Array]}
                            >
                              <View … />
                            </View>
                            <View
                              style={[Array]}
                            >
                              <View … />
                            </View>
                          </View>
                          <View
                            style={
                              [
                                [Object],
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={[Array]}
                            >
                              <View … />
                            </View>
                            <View
                              style={[Array]}
                            >
                              <View … />
                            </View>
                            <View
                              style={[Array]}
                            >
                              <View … />
                            </View>
                          </View>
                        </View>
                        <View
                          style={
                            {
                              "padding": 16,
                            }
                          }
                        >
                          <View
                            accessibilityRole="button"
                            accessibilityState={
                              {
                                "busy": undefined,
                                "checked": undefined,
                                "disabled": true,
                                "expanded": undefined,
                                "selected": undefined,
                              }
                            }
                            accessibilityValue={
                              {
                                "max": undefined,
                                "min": undefined,
                                "now": undefined,
                                "text": undefined,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={false}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "backgroundColor": "#121314",
                                "borderRadius": 12,
                                "flexDirection": "row",
                                "height": 48,
                                "justifyContent": "center",
                                "opacity": 0.5,
                                "overflow": "hidden",
                                "paddingHorizontal": 16,
                              }
                            }
                          >
                            <Text
                              accessibilityRole="text"
                              style={[Object]}
                            >
                              Enter amount
                            </Text>
                          </View>
                        </View>
                      </View>
                    </RNCSafeAreaView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`EarnInputView when values are entered in the keypad updates ETH and fiat values 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                Stake
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={-1}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <RNCSafeAreaView
                      edges={
                        {
                          "bottom": "additive",
                          "left": "additive",
                          "right": "additive",
                          "top": "off",
                        }
                      }
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "backgroundColor": "#ffffff",
                              "flex": 1,
                            },
                            {
                              "backgroundColor": "#ffffff",
                              "flex": 1,
                              "flexDirection": "column",
                              "justifyContent": "center",
                            },
                          ]
                        }
                      >
                        <View
                          style={
                            [
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "gap": 16,
                                "minHeight": 56,
                                "paddingLeft": 8,
                                "paddingRight": 8,
                              },
                              {
                                "marginTop": 0,
                              },
                              undefined,
                            ]
                          }
                          testID="header"
                        >
                          <View>
                            <View
                              onLayout={[Function]}
                            >
                              <View … />
                            </View>
                          </View>
                          <View
                            style={
                              [
                                [Object],
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={[Array]}
                            >
                              <Text … />
                            </View>
                          </View>
                          <View>
                            <View
                              onLayout={[Function]}
                            />
                          </View>
                        </View>
                        <RCTScrollView
                          collapsable={false}
                          contentContainerStyle={
                            {
                              "flexGrow": 1,
                            }
                          }
                          handlerTag={14}
                          handlerType="NativeViewGestureHandler"
                          onGestureHandlerEvent={[Function]}
                          onGestureHandlerStateChange={[Function]}
                          style={
                            {
                              "flex": 1,
                            }
                          }
                        >
                          <View>
                            <View
                              style={[Object]}
                            >
                              <View … />
                              <View … />
                              <View … />
                            </View>
                            <View
                              style={[Object]}
                            />
                          </View>
                        </RCTScrollView>
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "backgroundColor": "#ffffff",
                              "flexDirection": "row",
                              "gap": 8,
                              "justifyContent": "center",
                              "padding": 16,
                            }
                          }
                        >
                          <View
                            accessibilityRole="button"
                            accessibilityState={
                              {
                                "busy": undefined,
                                "checked": undefined,
                                "disabled": undefined,
                                "expanded": undefined,
                                "selected": undefined,
                              }
                            }
                            accessibilityValue={
                              {
                                "max": undefined,
                                "min": undefined,
                                "now": undefined,
                                "text": undefined,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "backgroundColor": "#3c4d9d0f",
                                "borderRadius": 20,
                                "flex": 1,
                                "flexDirection": "row",
                                "height": 40,
                                "justifyContent": "center",
                                "opacity": 1,
                                "overflow": "hidden",
                                "paddingHorizontal": 16,
                              }
                            }
                          >
                            <Text
                              accessibilityRole="none"
                              style={[Object]}
                            >
                              25%
                            </Text>
                          </View>
                          <View
                            accessibilityRole="button"
                            accessibilityState={
                              {
                                "busy": undefined,
                                "checked": undefined,
                                "disabled": undefined,
                                "expanded": undefined,
                                "selected": undefined,
                              }
                            }
                            accessibilityValue={
                              {
                                "max": undefined,
                                "min": undefined,
                                "now": undefined,
                                "text": undefined,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "backgroundColor": "#3c4d9d0f",
                                "borderRadius": 20,
                                "flex": 1,
                                "flexDirection": "row",
                                "height": 40,
                                "justifyContent": "center",
                                "opacity": 1,
                                "overflow": "hidden",
                                "paddingHorizontal": 16,
                              }
                            }
                          >
                            <Text
                              accessibilityRole="none"
                              style={[Object]}
                            >
                              50%
                            </Text>
                          </View>
                          <View
                            accessibilityRole="button"
                            accessibilityState={
                              {
                                "busy": undefined,
                                "checked": undefined,
                                "disabled": undefined,
                                "expanded": undefined,
                                "selected": undefined,
                              }
                            }
                            accessibilityValue={
                              {
                                "max": undefined,
                                "min": undefined,
                                "now": undefined,
                                "text": undefined,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "backgroundColor": "#3c4d9d0f",
                                "borderRadius": 20,
                                "flex": 1,
                                "flexDirection": "row",
                                "height": 40,
                                "justifyContent": "center",
                                "opacity": 1,
                                "overflow": "hidden",
                                "paddingHorizontal": 16,
                              }
                            }
                          >
                            <Text
                              accessibilityRole="none"
                              style={[Object]}
                            >
                              75%
                            </Text>
                          </View>
                          <View
                            accessibilityRole="button"
                            accessibilityState={
                              {
                                "busy": undefined,
                                "checked": undefined,
                                "disabled": undefined,
                                "expanded": undefined,
                                "selected": undefined,
                              }
                            }
                            accessibilityValue={
                              {
                                "max": undefined,
                                "min": undefined,
                                "now": undefined,
                                "text": undefined,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "backgroundColor": "#3c4d9d0f",
                                "borderRadius": 20,
                                "flex": 1,
                                "flexDirection": "row",
                                "height": 40,
                                "justifyContent": "center",
                                "opacity": 1,
                                "overflow": "hidden",
                                "paddingHorizontal": 16,
                              }
                            }
                          >
                            <SvgMock
                              color="#121314"
                              fill="currentColor"
                              height={16}
                              name="Sparkle"
                              style={[Object]}
                              width={16}
                            />
                            <Text
                              accessibilityRole="none"
                              style={[Object]}
                            >
                              Max
                            </Text>
                          </View>
                        </View>
                        <View
                          style={
                            [
                              {
                                "display": "flex",
                                "gap": 12,
                              },
                              {
                                "paddingHorizontal": 16,
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                [Object],
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={[Array]}
                            >
                              <View … />
                            </View>
                            <View
                              style={[Array]}
                            >
                              <View … />
                            </View>
                            <View
                              style={[Array]}
                            >
                              <View … />
                            </View>
                          </View>
                          <View
                            style={
                              [
                                [Object],
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={[Array]}
                            >
                              <View … />
                            </View>
                            <View
                              style={[Array]}
                            >
                              <View … />
                            </View>
                            <View
                              style={[Array]}
                            >
                              <View … />
                            </View>
                          </View>
                          <View
                            style={
                              [
                                [Object],
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={[Array]}
                            >
                              <View … />
                            </View>
                            <View
                              style={[Array]}
                            >
                              <View … />
                            </View>
                            <View
                              style={[Array]}
                            >
                              <View … />
                            </View>
                          </View>
                          <View
                            style={
                              [
                                [Object],
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={[Array]}
                            >
                              <View … />
                            </View>
                            <View
                              style={[Array]}
                            >
                              <View … />
                            </View>
                            <View
                              style={[Array]}
                            >
                              <View … />
                            </View>
                          </View>
                        </View>
                        <View
                          style={
                            {
                              "padding": 16,
                            }
                          }
                        >
                          <View
                            accessibilityRole="button"
                            accessibilityState={
                              {
                                "busy": undefined,
                                "checked": undefined,
                                "disabled": true,
                                "expanded": undefined,
                                "selected": undefined,
                              }
                            }
                            accessibilityValue={
                              {
                                "max": undefined,
                                "min": undefined,
                                "now": undefined,
                                "text": undefined,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={false}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "backgroundColor": "#121314",
                                "borderRadius": 12,
                                "flexDirection": "row",
                                "height": 48,
                                "justifyContent": "center",
                                "opacity": 0.5,
                                "overflow": "hidden",
                                "paddingHorizontal": 16,
                              }
                            }
                          >
                            <Text
                              accessibilityRole="text"
                              style={[Object]}
                            >
                              Enter amount
                            </Text>
                          </View>
                        </View>
                      </View>
                    </RNCSafeAreaView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
